--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+        <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
+            <button>
+                Play Video
+            </button>
+        </div>
         <script>
             AFRAME.registerComponent('videohandler', {
                 init: function () {
@@ -13,7 +18,9 @@
 
                     marker.addEventListener('markerFound', function () {
                         this.toggle = true;
-                        this.vid.play();
+                        document.querySelector("button").addEventListener("click", (e)=>{
+                            this.vid.play();
+                        })
                     }.bind(this));
 
                     marker.addEventListener('markerLost', function () {
@@ -43,7 +50,7 @@
                     loop
                     crossorigin
                     webkit-playsinline
-                    controls
+                    
                     playsinline
                 ></video>
             </a-assets>
