--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-        <div style='position: fixed; top: 80%; width:100%; text-align: center; z-index: 1;'>
+        <div style='position: fixed;
+                    top: 80%; 
+                    width:100%; 
+                    z-index: 1;
+                    width: -webkit-fill-avalible;
+                    height: -webkit-fill-avalible;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;'>
             <button>
                 Play Video
             </button>
