--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
         <div style='position: fixed;
                     top: 80%; 
-                    width:100%; 
+                    width:100vw; 
                     z-index: 1;
                     width: -webkit-fill-avalible;
                     height: -webkit-fill-avalible;
