--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     rotation="-90 0 0"
                     class="clickable"
                     gesture-handler>
-                    <a-image id="videoControls" src="#play" position="0 -1 0" scale="0.5 0.5 1"> </a-image>
+                    <a-image id="videoControls" src="#play" position="0 -1 0" scale="0.5 0.5 1" class="clickable"> </a-image>
                 </a-video>
             </a-marker>
 
