--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     class="clickable"
                     gesture-handler>
                     <a-image id="videoControls" src="#play" position="0 -1 0" scale="0.5 0.5 1" 
-                    play-pause > </a-image>
+                    videohandler > </a-image>
                 </a-video>
             </a-marker>
 
