--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-
+        <div style='position: fixed;
+                    top: 80%; 
+                    width: 100vw; 
+                    z-index: 1;
+                    width: -webkit-fill-avalible;
+                    height: -webkit-fill-avalible;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;'>
+            <button>
+                Play Video
+            </button>
+        </div>
         <script>
             AFRAME.registerComponent('videohandler', {
                 init: function () {
-                    var videoControls = document.querySelector('#videoControls')
                     var marker = this.el;
                     this.vid = document.querySelector("#vid");
 
                     marker.addEventListener('markerFound', function () {
                         this.toggle = true;
-
-
+                        document.querySelector("button").addEventListener("click", (e)=>{
+                            this.vid.play();
+                        })
                     }.bind(this));
-
-                    videoControls.addEventListener('click', function () {
-
-                        this.vid.play();
-
-                    });
 
                     marker.addEventListener('markerLost', function () {
                         this.toggle = false;
@@ -55,7 +61,6 @@
                     
                     playsinline
                 ></video>
-                <img id="play" src="assets/play.png">
             </a-assets>
 
             <a-marker
@@ -78,10 +83,8 @@
                     position="0 0.1 0"
                     rotation="-90 0 0"
                     class="clickable"
-                    gesture-handler>
-                    <a-image id="videoControls" src="#play" position="0 -1 0" scale="0.5 0.5 1" 
-                videohandler > </a-image>
-                </a-video>
+                    gesture-handler
+                ></a-video>
             </a-marker>
 
             <a-entity camera></a-entity>
